# RuConceptNet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  compressor.py  example.py  prepare_data.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
conceptnet/: __init__.py  compressor.py  conceptnet.py  sparse_representation.py
ruconceptnet/: __init__.py  compressor.py  conceptnet.py  meta.py  sparse_representation.py
tests/: conftest.py  test_compressor.py  test_conceptnet.py  test_meta.py  test_sparse_representation.py
